--- a/01Project/WebContent/Main.html
+++ b/01Project/WebContent/Main.html
@@ -10,7 +10,7 @@
 
 <body>
 
-	<!-- 페이지 상단 로고 및 배너 -->
+	<!-- 페이지 최상단 배너 -->
     <header>
 		<div class="wrapper">
 			<h1>
@@ -32,7 +32,7 @@
 	<!-- 안의 내용은 데이터 받아오면 변경 예정 -->
     <div class="wrapper">
 
-		<!-- 상단 -->
+		<!-- 메인 상단 -->
         <section class="main-contents">
 			<button>최신게임</button><button>추천게임</button>
 			<div class="container">
@@ -100,7 +100,7 @@
 			</div>
         </section>
 
-		<!-- 중단 -->
+		<!-- 메인 중단 -->
         <section class="main-contents">
 			<div class="container">
 				<div>
@@ -137,7 +137,7 @@
 			</div>
         </section>
 
-		<!-- 하단 -->
+		<!-- 메인 하단 -->
 		<section class="main-contents">
 			하단
         </section>
@@ -145,7 +145,7 @@
     </div>
 
 
-	<!-- 페이지 맨 밑부분 -->
+	<!-- 페이지 최하단 배너 -->
     <footer>
         <div class="wrapper">
             <p><small>&copy; 2021 PlayGround</small></p>
