--- a/01Project/WebContent/Main.html
+++ b/01Project/WebContent/Main.html
@@ -44,19 +44,14 @@
 							<td>3.</td>
 						</tr>
 						<tr>
-							<td><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></td>
-							<td><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></td>
-							<td><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></td>
+							<td><a href="#"><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></a></td>
+							<td><a href="#"><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></a></td>
+							<td><a href="#"><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></a></td>
 						</tr>
 						<tr>
-							<td class="center">Sample Game</td>
-							<td class="center">Sample Game</td>
-							<td class="center">Sample Game</td>
-						</tr>
-						<tr>
-							<td class="center">(2019)</td>
-							<td class="center">(2019)</td>
-							<td class="center">(2019)</td>
+							<td class="center"><a href="#">Sample Game<br><small>(2019)</small></a></td>
+							<td class="center"><a href="#">Sample Game<br><small>(2019)</small></a></td>
+							<td class="center"><a href="#">Sample Game<br><small>(2019)</small></a></td>
 						</tr>
 						<tr>
 							<td class="center"><a href="#" class="tag">#태그</a></td>
@@ -68,32 +63,25 @@
 				<div>
 					<ol class="topChart" start="4">
 						<li>
-							Sample Game
-							<small>(2019)</small>
+							<a href="#">Sample Game <small>(2019)</small></a>
 						</li>
 						<li>
-							Sample Game
-							<small>(2019)</small>
+							<a href="#">Sample Game <small>(2019)</small></a>
 						</li>
 						<li>
-							Sample Game
-							<small>(2019)</small>
+							<a href="#">Sample Game <small>(2019)</small></a>
 						</li>
 						<li>
-							Sample Game
-							<small>(2019)</small>
+							<a href="#">Sample Game <small>(2019)</small></a>
 						</li>
 						<li>
-							Sample Game
-							<small>(2019)</small>
+							<a href="#">Sample Game <small>(2019)</small></a>
 						</li>
 						<li>
-							Sample Game
-							<small>(2019)</small>
+							<a href="#">Sample Game <small>(2019)</small></a>
 						</li>
 						<li>
-							Sample Game
-							<small>(2019)</small>
+							<a href="#">Sample Game <small>(2019)</small></a>
 						</li>
 					</ol>
 				</div>
@@ -107,39 +95,54 @@
 					<table class="midTable">
 						<tr>
 							<td>1.</td>
-							<td><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></td>
-							<td>Sample Game <small>(2019)</small></td>
+							<td><a href="#"><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></a></td>
+							<td><a href="#">Sample Game <small>(2019)</small></a></td>
 							<td><div class="score">95.5</div></td>
 						</tr>
 						<tr>
 							<td>2.</td>
-							<td><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></td>
-							<td>Sample Game <small>(2019)</small></td>
+							<td><a href="#"><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></a></td>
+							<td><a href="#">Sample Game <small>(2019)</small></a></td>
 							<td><div class="score">95.5</div></td>
 						</tr>
 						<tr>
 							<td>3.</td>
-							<td><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></td>
-							<td>Sample Game <small>(2019)</small></td>
+							<td><a href="#"><img class="gameImg" src="Image/sampleGame.jpg" alt="게임 이미지"></a></td>
+							<td><a href="#">Sample Game <small>(2019)</small></a></td>
 							<td><div class="score">95.5</div></td>
 						</tr>
 					</table>
 				</div>
 				<div>
-					<input type="checkbox" name="tag" value="tag1">tag1<br>
-					<input type="checkbox" name="tag" value="tag2">tag2<br>
-					<input type="checkbox" name="tag" value="tag3">tag3<br>
-					<input type="checkbox" name="tag" value="tag4">tag4<br>
-					<input type="checkbox" name="tag" value="tag5">tag5<br>
-					<input type="checkbox" name="tag" value="tag6">tag6<br>
-					<input type="checkbox" name="tag" value="tag7">tag7
+					태그 선택
+					<div class="tagScroll">
+						<input type="checkbox" name="tag" value="tag1">&nbsp tag1<br>
+						<input type="checkbox" name="tag" value="tag2">&nbsp tag2<br>
+						<input type="checkbox" name="tag" value="tag3">&nbsp tag3<br>
+						<input type="checkbox" name="tag" value="tag4">&nbsp tag4<br>
+						<input type="checkbox" name="tag" value="tag5">&nbsp tag5<br>
+						<input type="checkbox" name="tag" value="tag6">&nbsp tag6<br>
+						<input type="checkbox" name="tag" value="tag7">&nbsp tag7<br>
+					</div>
 				</div>
 			</div>
         </section>
 
 		<!-- 메인 하단 -->
 		<section class="main-contents">
-			하단
+			<div class="bestBoard">
+				<p>게임 베스트</p><p>질문 답변 베스트</p>
+			</div>
+			<div class="container">
+				<div>
+					<button class="btn">추천</button><button class="btn">조회</button>
+					게임 게시판 베스트
+				</div>
+				<div>
+					<button class="btn">추천</button><button class="btn">조회</button>
+					질문 답변 게시판 베스트
+				</div>
+			</div>
         </section>
 
     </div>
