--- a/01Project/WebContent/Main.html
+++ b/01Project/WebContent/Main.html
@@ -136,11 +136,78 @@
 			<div class="container">
 				<div>
 					<button class="btn">추천</button><button class="btn">조회</button>
-					게임 게시판 베스트
+					<ol>
+						<li>
+							title
+							<img class="icon" src="Image/eye.png" alt="조회수"> 123
+							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+						</li>
+						<li>
+							title
+							<img class="icon" src="Image/eye.png" alt="조회수"> 123
+							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+						</li>
+						<li>
+							title
+							<img class="icon" src="Image/eye.png" alt="조회수"> 123
+							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+						</li>
+						<li>
+							title
+							<img class="icon" src="Image/eye.png" alt="조회수"> 123
+							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+						</li>
+					</ol>
 				</div>
 				<div>
 					<button class="btn">추천</button><button class="btn">조회</button>
-					질문 답변 게시판 베스트
+					<ol>
+						<li>
+							title
+							<img class="icon" src="Image/eye.png" alt="조회수"> 123
+							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+						</li>
+						<li>
+							title
+							<img class="icon" src="Image/eye.png" alt="조회수"> 123
+							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+						</li>
+						<li>
+							title
+							<img class="icon" src="Image/eye.png" alt="조회수"> 123
+							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+						</li>
+						<li>
+							title
+							<img class="icon" src="Image/eye.png" alt="조회수"> 123
+							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+						</li>
+					</ol>
+				</div>
+			</div>
+			<div class="news">
+				<p>최신 뉴스</p>
+			</div>
+			<div class="container">
+				<div>
+					<ol>
+						<li>
+							News Title
+							<small>2021.04.21</small>
+						</li>
+						<li>
+							News Title
+							<small>2021.04.21</small>
+						</li>
+						<li>
+							News Title
+							<small>2021.04.21</small>
+						</li>
+						<li>
+							News Title
+							<small>2021.04.21</small>
+						</li>
+					</ol>
 				</div>
 			</div>
         </section>
