하단 페이지 수정

--- a/01Project/WebContent/Main.html
+++ b/01Project/WebContent/Main.html
@@ -136,51 +136,59 @@
 			<div class="container">
 				<div>
 					<button class="btn">추천</button><button class="btn">조회</button>
-					<ol>
+					<ol class="boardChart">
 						<li>
 							title
 							<img class="icon" src="Image/eye.png" alt="조회수"> 123
 							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+							<hr>
 						</li>
 						<li>
 							title
 							<img class="icon" src="Image/eye.png" alt="조회수"> 123
 							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+							<hr>
 						</li>
 						<li>
 							title
 							<img class="icon" src="Image/eye.png" alt="조회수"> 123
 							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+							<hr>
 						</li>
 						<li>
 							title
 							<img class="icon" src="Image/eye.png" alt="조회수"> 123
 							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+							<hr>
 						</li>
 					</ol>
 				</div>
 				<div>
 					<button class="btn">추천</button><button class="btn">조회</button>
-					<ol>
+					<ol class="boardChart">
 						<li>
 							title
 							<img class="icon" src="Image/eye.png" alt="조회수"> 123
 							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+							<hr>
 						</li>
 						<li>
 							title
 							<img class="icon" src="Image/eye.png" alt="조회수"> 123
 							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+							<hr>
 						</li>
 						<li>
 							title
 							<img class="icon" src="Image/eye.png" alt="조회수"> 123
 							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+							<hr>
 						</li>
 						<li>
 							title
 							<img class="icon" src="Image/eye.png" alt="조회수"> 123
 							<img class="icon" src="Image/thumb.png" alt="추천수"> 12
+							<hr>
 						</li>
 					</ol>
 				</div>
@@ -190,22 +198,26 @@
 			</div>
 			<div class="container">
 				<div>
-					<ol>
+					<ol class="boardChart">
 						<li>
 							News Title
 							<small>2021.04.21</small>
+							<hr>
 						</li>
 						<li>
 							News Title
 							<small>2021.04.21</small>
+							<hr>
 						</li>
 						<li>
 							News Title
 							<small>2021.04.21</small>
+							<hr>
 						</li>
 						<li>
 							News Title
 							<small>2021.04.21</small>
+							<hr>
 						</li>
 					</ol>
 				</div>
