게시판 리스트쪽 틀 구성

--- a/PlayGround_1/AcornProject_PG/WebContent/Board/temp.html
+++ b/PlayGround_1/AcornProject_PG/WebContent/Board/temp.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>BoardPage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="../CSS/BoardList.css" rel="stylesheet">
     <script type="text/javascript" src="../JS/boardList.js"></script>
 </head>
@@ -29,10 +28,120 @@
 
 	<!-- 게시판 컨텐츠-->
     <div class="wrapper contents">
+
 		<h1>게시판</h1>
+
 		<select name="boardCategory">
-			<option value=""></option>
+			<option>일반글</option>
+			<option>게임정보</option>
+			<option>할인정보</option>
+			<option>QnA</option>
 		</select>
+
+		<table>
+			<tr>
+				<td>카테고리</td>
+				<td>제목</td>
+				<td>작성자</td>
+				<td>날짜</td>
+				<td>조회수</td>
+				<td>추천수</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+			<tr>
+				<td>temp</td>
+				<td>temp temp temp temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+				<td>temp</td>
+			</tr>
+		</table>
+
+		<form action="BoardListServlet">
+			<select name="searchCategory">
+				<option>제목+작성자</option>
+				<option>제목</option>
+				<option>작성자</option>
+			</select>
+			<input type="text">
+			<button type="submit"><img src="../Image/search.png" alt="검색"></button>
+		</form>
+
+		<button>글 작성</button>
+
+		<div>
+			<div><</div>
+			<div>1</div>
+			<div>2</div>
+			<div>3</div>
+			<div>4</div>
+			<div>></div>
+		</div>
+
     </div>
 
 
