게시판 목록 페이지 수정

--- a/PlayGround_1/AcornProject_PG/WebContent/Board/temp.html
+++ b/PlayGround_1/AcornProject_PG/WebContent/Board/temp.html
@@ -47,78 +47,6 @@
 				<td>조회수</td>
 				<td>추천수</td>
 			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
-			<tr>
-				<td>temp</td>
-				<td>temp temp temp temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-				<td>temp</td>
-			</tr>
 		</table>
 
 		<form action="BoardListServlet">
@@ -134,16 +62,11 @@
 		<button>글 작성</button>
 
 		<div>
-			<div><</div>
-			<div>1</div>
-			<div>2</div>
-			<div>3</div>
-			<div>4</div>
-			<div>></div>
+			<button>&lt;</button>
+			<button>&gt;</button>
 		</div>
 
     </div>
-
 
 	<!-- 페이지 맨 밑부분 -->
     <footer>
