메인페이지에선 게시판 리스트 페이지로, 게시판 리스트 페이지에선 게시글 작성 페이지로 넘어갈 수 있도록 변경

--- a/PlayGround_1/AcornProject_PG/WebContent/Board/tempBoardList.html
+++ b/PlayGround_1/AcornProject_PG/WebContent/Board/tempBoardList.html
@@ -40,12 +40,12 @@
 
 		<table>
 			<tr>
-				<td>카테고리</td>
-				<td>제목</td>
-				<td>작성자</td>
-				<td>날짜</td>
-				<td>조회수</td>
-				<td>추천수</td>
+				<th>카테고리</th>
+				<th>제목</th>
+				<th>작성자</th>
+				<th>날짜</th>
+				<th>조회수</th>
+				<th>추천수</th>
 			</tr>
 		</table>
 
@@ -59,7 +59,7 @@
 			<button type="submit"><img src="../Image/search.png" alt="검색"></button>
 		</form>
 
-		<button>글 작성</button>
+		<button id="write">글 작성</button>
 
 		<div>
 			<button>&lt;</button>
